# zope.i18n

./: .coveragerc  .gitattributes  .gitignore  .meta.toml  .travis.yml  BRANCH-TODO.txt  CHANGES.rst  CHANGES.txt  DEPENDENCIES.cfg  Domain.py  GettextExportFilter.py  GettextImportFilter.py  GettextMessageCatalog.py  GlobalTranslationService.py  I18nObject.stx  IDomain.py  IEditableTranslationService.py  II18nAware.py  ILanguageAvailability.py  IMessageCatalog.py  IMessageExportFilter.py  IMessageImportFilter.py  INSTALL.txt  INegotiator.py  ITranslationService.py  IUserPreferedLanguages.py  IUserPreferredCharsets.py  IUserPreferredLanguages.py  MANIFEST.in  MessageCatalog.py  Negotiator.py  README.rst  README.txt  SimpleTranslationService.py  Translate.py  TranslationService.py  __init__.py  _strptime.py  buildout.cfg  configure.zcml  (+26 more)
Views/: configure.zcml  views.zcml
Views/Browser/: BaseTranslationServiceView.py  ExportImport.py  Synchronize.py  Translate.py  browser.zcml  configure.zcml  exportImport.pt  synchronize.pt  translate.pt  translateMessage.pt
Views/Browser/tests/: testTranslate.py
Views/XMLRPC/: Methods.py  __init__.py  configure.zcml  xmlrpc.zcml
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  testing.rst
interfaces/: __init__.py  locales.py
locale/de/LC_MESSAGES/: Zope-I18n.mo  (+1 more)
locales/: README.txt  __init__.py  af.xml  af_ZA.xml  am.xml  am_ET.xml  ar.xml  ar_AE.xml  ar_BH.xml  ar_DZ.xml  ar_EG.xml  ar_IN.xml  ar_IQ.xml  ar_JO.xml  ar_KW.xml  ar_LB.xml  ar_LY.xml  ar_MA.xml  ar_OM.xml  ar_QA.xml  ar_SA.xml  ar_SD.xml  ar_SY.xml  ar_TN.xml  ar_YE.xml  az.xml  az_AZ.xml  be.xml  be_BY.xml  bg.xml  bg_BG.xml  bn.xml  bn_IN.xml  ca.xml  ca_ES.xml  ca_ES_PREEURO.xml  cs.xml  cs_CZ.xml  da.xml  da_DK.xml  (+245 more)
locales/tests/: test_docstrings.py  test_locales.py  test_xmlfactory.py
tests/: __init__.py  de-default.mo  de-default.po  en-alt.mo  en-alt.po  en-default.mo  en-default.po  test.py  testDirectives.py  testGettextExportImport.py  testGettextMessageCatalog.py  testGlobalTranslationService.py  testI18nAwareObject.py  testIEditableTranslationService.py  testII18nAware.py  testIMessageCatalog.py  testIReadMessageCatalog.py  testIReadTranslationService.py  testISyncTranslationService.py  testITranslationService.py  testIWriteMessageCatalog.py  testIWriteTranslationService.py  testMessageCatalog.py  testNegotiator.py  testSimpleTranslationService.py  testTranslationService.py  test_formats.py  test_gettextmessagecatalog.py  test_globaltranslationservice.py  test_imessagecatalog.py  test_interpolate.py  test_ireadmessagecatalog.py  test_ireadtranslationservice.py  test_isynctranslationservice.py  test_itranslationdomain.py  test_itranslationservice.py  test_iwritemessagecatalog.py  test_iwritetranslationservice.py  test_locales.py  test_messageid.py  (+9 more)
tests/xmllocales/: de.xml  de_DE.xml  de_DE_PREEURO.xml  root.xml
(+271 files in other folders)
