# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 81",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "zope.i18n"
version = "6.1.dev0"
description = "Zope Internationalization Support"
license = "ZPL-2.1"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: Zope :: 3",
]
dynamic = ["readme"]
requires-python = ">=3.10"
authors = [
    {name = "Zope Foundation and contributors",email = "zope-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = [
    "python-gettext",
    "pytz",
    "zope.deprecation",
    "zope.schema",
    "zope.i18nmessageid >= 4.3",
    "zope.component",
]
keywords = [
    "zope3",
    "internationalization",
    "localization",
    "i18n",
    "l10n",
    "gettext",
    "ICU",
    "locale",
]

[project.optional-dependencies]
test = [
    "zope.component[zcml]",
    "zope.configuration",
    "zope.security",
    "zope.publisher",
    "zope.testing",
    "zope.testrunner >= 6.4",
]
compile = []
zcml = [
    "zope.component[zcml]",
    "zope.configuration",
    "zope.security",
]
docs = [
    "Sphinx",
    "repoze.sphinx.autointerface",
]

[project.urls]
Source = "https://github.com/zopefoundation/zope.i18n"
Documentation = "https://zopei18n.readthedocs.io/"
Issues = "https://github.com/zopefoundation/zope.i18n/issues"
Changelog = "https://raw.githubusercontent.com/zopefoundation/zope.i18n/master/CHANGES.rst"

[tool.coverage.run]
branch = true
source = ["zope.i18n"]

[tool.coverage.report]
fail_under = 99
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}

